Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-469: Refactor GraphMapper (ereisman)

  GIRAPH-491: Observer for job lifecycle (nitay)

  GIRAPH-490: Constants for GiraphStats / GiraphTimers (nitay)

  GIRAPH-488: ArrayOutOfBoundsException in org.apache.giraph.worker.InputSplitPathOrganizer (ereisman)

  GIRAPH-418: Create maven profile for CDH 4.1.2 (ekoontz)

  GIRAPH-487: VertexInputPath in GiraphRunner refers to EdgeInputPath (taguan via apresta)

  GIRAPH-481: mvn compile error when building jar file - Error with Accumulo (tavoaqp via nitay)

  GIRAPH-472: Refactor MapFunctions enum to be more general (ereisman)

  GIRAPH-254: Constant Variable name misspelled in HashMasterPartitioner.java (Gustavo Salazar Torres via ereisman)

  GIRAPH-431: Support edge and vertex value input formats in GiraphRunner (apresta)

  GIRAPH-477: Fetching locality info in InputSplitPathOrganizer causes jobs to hang (apresta via ereisman)

  GIRAPH-459: Group Vertex Mutations by Partition ID (claudio)

  GIRAPH-473: InputSplitPathOrganizer should be aware of multiple threads (apresta via ereisman)

  GIRAPH-478: Bring back jar-with-deps for giraph-hcatalog (nitay)

  GIRAPH-474: Add an oprtion not to use direct byte buffers. (majakabiljo via ereisman)

  GIRAPH-476: SequenceFileVertexOutputFormat (nitay)

  GIRAPH-409: Refactor / cleanups (nitay)

  GIRAPH-465: MapFunctions cleanup (nitay)

  GIRAPH-464: MasterObserver#applicationFailed callback (nitay)

  GIRAPH-458: split formats module into accumulo,hbase,hcatalog (nitay)

  GIRAPH-463: Create VertexResolver only once (apresta)

  GIRAPH-457: update module names (nitay)

  GIRAPH-455: Add meta information to built jars (nitay)

  GIRAPH-456: Log where master is on every host (nitay)

  GIRAPH-141: Multigraph support in Giraph (apresta)
        
  GIRAPH-452: Fix hcatalog jar (nitay)

  GIRAPH-450: post-review not working after switch to git (nitay)

  GIRAPH-449: License header missing from for-each-profile.sh (apresta)
