@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-312: Giraph needs an admin script (ereisman)
+
   GIRAPH-469: Refactor GraphMapper (ereisman)
 
   GIRAPH-491: Observer for job lifecycle (nitay)
